Replace safe Collectors.toList() usages with Stream.toList()