@@ -30,7 +30,6 @@ import com.fasterxml.jackson.databind.json.JsonMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import java.util.ArrayList;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import org.apache.polaris.persistence.nosql.authz.api.Privilege;
@@ -201,8 +200,7 @@ public class TestPrivilegeSetImpl {
     }
 
     soft.assertThat(values)
-        .containsExactlyInAnyOrderElementsOf(
-            inJson.stream().map(Privilege::name).collect(Collectors.toList()));
+        .containsExactlyInAnyOrderElementsOf(inJson.stream().map(Privilege::name).toList());
   }
 
   static Stream<Arguments> compositeByNameSerialization() {
