@@ -29,7 +29,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.apache.polaris.core.PolarisCallContext;
 import org.apache.polaris.core.PolarisDiagnostics;
@@ -1364,14 +1363,12 @@ public class AtomicOperationMetaStoreManager extends BaseMetaStoreManager {
                     new PolarisEntityId(
                         grantRecord.getGranteeCatalogId(), grantRecord.getGranteeId()))
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
     List<PolarisBaseEntity> entities = ms.lookupEntities(callCtx, entityIds);
 
     // done, return the list of grants and their version
     return new LoadGrantsResult(
-        grantsVersion,
-        returnGrantRecords,
-        entities.stream().filter(Objects::nonNull).collect(Collectors.toList()));
+        grantsVersion, returnGrantRecords, entities.stream().filter(Objects::nonNull).toList());
   }
 
   /** {@inheritDoc} */
@@ -1409,14 +1406,12 @@ public class AtomicOperationMetaStoreManager extends BaseMetaStoreManager {
                     new PolarisEntityId(
                         grantRecord.getSecurableCatalogId(), grantRecord.getSecurableId()))
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
     List<PolarisBaseEntity> entities = ms.lookupEntities(callCtx, entityIds);
 
     // done, return the list of grants and their version
     return new LoadGrantsResult(
-        grantsVersion,
-        returnGrantRecords,
-        entities.stream().filter(Objects::nonNull).collect(Collectors.toList()));
+        grantsVersion, returnGrantRecords, entities.stream().filter(Objects::nonNull).toList());
   }
 
   /** {@inheritDoc} */
@@ -1504,7 +1499,7 @@ public class AtomicOperationMetaStoreManager extends BaseMetaStoreManager {
                   }
                 })
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
 
     // Since the contract of this method is to only return an empty list once no available tasks
     // are found anymore, if we happen to fail to lease any tasks at all due to all of them
@@ -1664,7 +1659,7 @@ public class AtomicOperationMetaStoreManager extends BaseMetaStoreManager {
                   }
                 })
             .map(e -> toResolvedPolarisEntity(callCtx, e, ms))
-            .collect(Collectors.toList());
+            .toList();
     return new ResolvedEntitiesResult(ret);
   }
 
@@ -1904,7 +1899,7 @@ public class AtomicOperationMetaStoreManager extends BaseMetaStoreManager {
                         policyMappingRecord.getPolicyCatalogId(),
                         policyMappingRecord.getPolicyId()))
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
     return ms.lookupEntities(callCtx, policyEntityIds);
   }
 }
